--- a/src/pages/Batalla.css
+++ b/src/pages/Batalla.css
@@ -106,3 +106,36 @@
     height: 10px; 
     border-radius: 50%; 
 }
+
+.blur {
+  filter: blur(5px);
+  pointer-events: none; /* Evita clics accidentales mientras eliges */
+}
+
+.placeholder-pkmn {
+  width: 150px;
+  height: 150px;
+  border: 2px dashed #aaa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+  color: #aaa;
+}
+
+/* Reutilizamos el estilo de las cartas de competencia */
+.poke-card-select {
+  background: #f0f0f0;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+  transition: transform 0.2s;
+  color: #333;
+}
+
+.poke-card-select:hover {
+  transform: scale(1.05);
+  background: #ffcb05;
+}
+
