--- a/src/pages/Criadero.css
+++ b/src/pages/Criadero.css
@@ -266,6 +266,13 @@
   transform: translateY(-2px);
 }
 
+.blur {
+  filter: blur(5px);
+  pointer-events: none; /* Esto evita que puedas hacer click en lo que está atrás */
+  user-select: none;
+}
+
+
 /* Colores por tipo de poción */
 .potion-list button:nth-child(1):not(:disabled) { border-color: #81c784; } /* Sencilla */
 .potion-list button:nth-child(2):not(:disabled) { border-color: #64b5f6; } /* Súper */
